# sdl

./: CMakeLists.txt  run.sh
src/: game.c  game.h  main.c
